<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".NextActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="285dp"
        android:layout_height="88dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/white"
        android:text="@string/firstOng"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idNome"
        android:layout_width="2dp"
        android:layout_height="24dp"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="79dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="231dp"
        android:layout_height="201dp"
        android:layout_marginTop="160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/frame"
        tools:layout_editor_absoluteX="90dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="353dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/secondOng"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="375dp"
        android:layout_height="153dp"
        android:text="@string/donating"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="129dp"
        android:layout_height="144dp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/user"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>